manifests/habilitar-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habilitar-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"    
spec:
  rules:
    - host: habilitarapi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habilitar-api
                port:
                  number: 80
